<resources>
    <string name="app_name">HQ</string>
    <string name="author">AndyCLanguage</string>

    <!-- 登录页面 -->
    <string name="login_user">邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_button">登录</string>
    <string name="login_register">注册账号</string>
    <string name="login_find_password">找回密码</string>
    <string name="login">正在登陆...</string>

    <!-- 主页面 -->
    <string name="main_order">账单</string>
    <string name="main_chart">图表</string>
    <string name="main_person">个人</string>

    <!--个人页面-->
    <string name="person_item1">账务目录</string>
    <string name="person_item2">记账通知</string>
    <string name="person_item3">退出登录</string>

    <!-- 账务目录页面 -->
    <string name="catalog_title">账务目录</string>
    <string name="catalog_no_data_tips">该页面还没数据哦，赶快新建账务类型吧！</string>


    <!-- 账务目录编辑页 -->
    <string name="catalog_category">类别 :</string>
    <string name="input_catalog_name">请输入目录名称</string>
    <string name="earnings">收入</string>
    <string name="expenditure">支出</string>
    <string name="catalog_delete">删除</string>
    <string name="catalog_title_new">新建</string>
    <string name="catalog_title_edit">编辑</string>
    <string name="catalog_save">保存</string>

    <!-- 记账页面 -->
    <string name="record_num_default">0.00</string>
    <string name="record_earnings">收</string>
    <string name="record_expenditure">支</string>
    <string name="record_date_desc">1995 &#8211; 04 &#8211; 15</string>
    <string name="record_title">记账</string>
    <string name="record_save">保存</string>
    <string name="record_choose_type">账务类型</string>
    <string name="record_input_money_tips">未输入金额</string>
    <string name="record_choose_catalog_tips">请选择类型</string>

    <!-- 账务列表 -->
    <string name="records_earnings">收</string>
    <string name="records_expenditure">支</string>
    <string name="records_data_desc">1995 &#8211; 04 &#8211; 15 周五</string>
    <string name="records_no_data_tips">该月没有记账哦！赶快记一笔吧 :-) </string>
    <string name="records_current_month">本月</string>

    <!-- 图表页面 -->
    <string name="chart_no_data_tips">还没记过帐，所以不能统计呢 </string>

    <!-- 图片描述信息 -->
    <string name="head_img_desc">个人头像</string>
    <string name="relative_head_img">关系人头像</string>
    <string name="default_right">默认指右图像</string>
    <string name="edit_img_desc">编辑</string>
    <string name="qq_login_desc">QQ登录</string>
    <string name="animation">动画</string>

    <string name="title">标题</string>
    <string name="back">返回</string>
</resources>
