<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/head_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/head_img_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageView
        android:id="@+id/relative_head_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/relative_head_img"
        app:layout_constraintBottom_toBottomOf="@+id/head_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/head_img"
        app:layout_constraintTop_toTopOf="@+id/head_img"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_underline_and_topline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_img">

        <ImageView
            android:id="@+id/item1_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:contentDescription="@string/person_item1"
            android:src="@mipmap/catalog"
            app:srcCompat="@mipmap/catalog" />

        <TextView
            android:id="@+id/item1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:text="@string/person_item1"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_underline_and_topline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <ImageView
            android:id="@+id/item3_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:contentDescription="@string/person_item3"
            android:src="@mipmap/logout"
            app:srcCompat="@mipmap/logout" />

        <TextView
            android:id="@+id/item3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:text="@string/person_item3"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_underline_and_topline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/item2_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:contentDescription="@string/person_item2"
            android:src="@mipmap/notification"
            app:srcCompat="@mipmap/notification" />

        <TextView
            android:id="@+id/item2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:text="@string/person_item2"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <include
        layout="@layout/layout_header"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>